avi/nginx-ingress-contour-ssl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-contour-ssl
spec:
  selector:
    matchLabels:
      app: nginx-contour-ssl
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-contour-ssl
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service-contour-ssl
spec:
  selector:
    app: nginx-contour-ssl
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nginx-httpproxy-contour-ssl
spec:
  virtualhost:
    fqdn: nginx-ssl.contour.rito.tkg-vsp-lab.hyrulelab.com
    tls:
      secretName: nginx-cert-tls
  routes:
    - services:
        - name: nginx-service-contour-ssl
          port: 80
